2008-11-12  Andi Kleen  <andi@firstfloor.org>

	* events/i386/arch_perfmon/events: Fix event name to avoid
	  parsing error

2008-11-05  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/file_manip.cpp: Add mode arg to open

2008-10-30  William Cohen  <wcohen@redhat.com>

	* m4/binutils.m4: Defeat compiler optimization in configure
	  check for bfd_get_synthetic_symtab

2008-10-27  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/op_spu_bfd.cpp: Initialize anon_obj to false for op_bfd
	  objects for Cell SPE embedded binaries

2008-10-23  Dave Nomura  <dcnltc@us.ibm.com>

	* libutil++/xml_output.cpp:
	* libutil/xml_out.c:
	* libutil/xml_out.h:
	* libutil/xml_events.c:
	* libutil/xml_events.h:
	* libutil/Makefile.am:
	* libop/op_xml_out.c:
	* libop/op_xml_out.h:
	* libop/op_xml_events.c:
	* libop/op_xml_events.h:
	* libop/Makefile.am: moved xml util routines to libop and fixed some
	  other problems in the previous patch

2008-10-15  Dave Nomura  <dcnltc@us.ibm.com>

	* utils/ophelp.c:
	* libutil++/xml_output.cpp:
	* libutil++/xml_output.h:
	* libutil/xml_out.c:
	* libutil/xml_out.h:
	* libutil/xml_events.c:
	* libutil/xml_events.h:
	* libutil/Makefile.am: added -X option to ophelp to generate XML

2008-10-06  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in:
	* m4/binutils.m4:
	* m4/cellspubfdsupport.m4: Handle BFD's new dependency on libz

2008-08-28  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: Add configure option for non-standard binutils lib

2008-08-28  Andi Kleen  <andi@firstfloor.org>

	* events/i386/arch_perfmon/events:
	* events/i386/arch_perfmon/unit_masks:
	* events/Makefile.am:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* libop/op_events.h:
	* libop/op_hw_specific.h:
	* libpp/op_header.cpp:
	* utils/ophelp.c: support for Intel arch perfmon

2008-08-28  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: Change AM_INIT_AUTOMAKE to 0.9.5cvs; enables -werror
	  gcc option to stop build on warnings